change table size

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
 <br>
   <input type="button"value="レイ"onclick="someone('レイ');">
-  <input type="button"value="アスカ"onclick="someone(アスカ);">
+  <input type="button"value="アスカ"onclick="someone('アスカ');">
   <input type="button"value="シンジ"onclick="someone('シンジ');"> 
 <br> 
   
