--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div id="back">
       <input type="button" value="変更後3秒でまた戻る" 
              onclick="ChangeImageAndBack();">
-  <img src='./image/Josai_Logo.JPG' id="img13" alt="Josai_Logo">
+  <img src='Josai_Logo.JPG' id="img13" alt="Josai_Logo" class="imagechange">
   </div>
   <br>
   
