--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <br>
  <h1>タイマーイベントによる実行6-12</h1>
       <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
-  <img src='.Josai_Logo.JPG' id="logo2" alt="Josai Logo">
+  <img src='.Josai_Logo.JPG' id="logo2" alt="Josai_Logo">
   <br>
    <h1>タイマーイベントによる実行の応用6-13</h1>
   <div id="back">
