--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
   <br>
 <h1>タイマーイベントによる実行6-12</h1>
       <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
-  <img src='./image/josai.png' id="logo2" alt="Josai Logo">
+  <img src='Josai_Logo.jpg' id="logo2" alt="Josai Logo">
   <br>
    <h1>タイマーイベントによる実行の応用6-13</h1>
   <div id="back">
       <input type="button" value="変更後3秒でまた戻る" 
              onclick="ChangeImageAndBack();">
-  <img src='/image/josai.png' id="img13" alt="Josai_Logo" class="imagechange">
+  <img src='Josai_Logo.jpg' id="img13" alt="Josai_Logo" class="imagechange">
   </div>
   <br>
   
