--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <br> 
   
 <h1>JavaScriptによる変更の練習68</h1>
-   <input type="button"value="あいさつ"onclick="sayhello68();">
+   <input type="button"value="あいさつ" onclick="sayhello68();">
    <input type="button"value="太郎"onclick="taro68();">
    <input type="button"value="花子"onclick="hanako68();">
    <p id="who68">最初はworld</p>
@@ -65,7 +65,7 @@
     
     <div id="image1">
       <input type="button" value="画像の変更" onclick="imagechange1();">
-      <img src='/image/josai.png' id="logo"alt="Josai_Logo"</div>
+      <img src='Josai_Logo.JPG' id="logo"alt="Josai_Logo"</div>
    <br>
       
       <h1>タイマーイベントによる実行6-10</h1>
@@ -88,13 +88,13 @@
   <br>
 <h1>タイマーイベントによる実行6-12</h1>
       <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
-  <img src='Josai_Logo.jpg' id="logo2" alt="Josai Logo">
+  <img src='Josai_Logo.JPG' id="logo2" alt="Josai_Logo">
   <br>
    <h1>タイマーイベントによる実行の応用6-13</h1>
   <div id="back">
       <input type="button" value="変更後3秒でまた戻る" 
              onclick="ChangeImageAndBack();">
-  <img src='Josai_Logo.jpg' id="img13" alt="Josai_Logo" class="imagechange">
+  <img src='Josai_Logo.JPG' id="img13" alt="Josai_Logo" class="imagechange">
   </div>
   <br>
   
