--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="ex06-13.js"></script>
   <script src="ex09-2.js"></script>
   <script src="ex07-1.js"></script>
-    
+  <script src="ex07-3.js"></script> 
   </head>
   
   <body>
