--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <title>変数　引数</title>
 
- <link rel="stylesheet"href="josai.css">
+ <link rel= "stylesheet" href="josai.css">
 
   <script src="ex06-5.js"></script>
   <script src="ex06-6.js"></script>
@@ -64,8 +64,8 @@
     <br>
     
     <div id="image1">
-      <input type="button" value="画像の変更" onclick="imagechange1();">
-      <img src='Josai_Logo.JPG' id="logo"alt="Josai_Logo"</div>
+      <input type="button" value="画像の変更" onclick="imgchange1();">
+      <img src='Josai_Logo.JPG' id="logo"alt="Josai Logo"</div>
    <br>
       
       <h1>タイマーイベントによる実行6-10</h1>
